monitoring/kube-prometheus-stack/ingress-prometheus.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
spec:
  ingressClassName: haproxy
  rules:
  - http:
      paths:
      - backend:
          service:
            name: prometheus-stack-kube-prom-prometheus
            port:
              number: 9090
        path: /prometheus
        pathType: Prefix
